--- a/scss/complementos/_header.scss
+++ b/scss/complementos/_header.scss
@@ -1,24 +1,12 @@
-//       D E S K T O P    M O D E                     //
-@media (max-width: 8500px) {
-  .header {
-    background-color: $color-primary;
-    height: 10rem;
-    top: 0;
-    left: 0;
-    .nav {
-      font-size: 2.1rem;
-      display: flex;
-      justify-content: space-between;
-      font-family: "roboto" sans-serif;
-      max-width: 2400px;
-      margin: 0 auto;
-    }
-
-    .nav-link {
-      color: $color-blanco;
-      text-decoration: none;
-    }
-
+.header {
+  height: 10rem;
+  .nav {
+    font-size: 2.1rem;
+    display: flex;
+    justify-content: space-between;
+    font-family: "roboto" sans-serif;
+    max-width: 2400px;
+    margin: 0 auto;
     .logo {
       font-size: 4rem;
       color: $color-blanco;
@@ -27,8 +15,7 @@
       font-weight: bold;
       padding: 0 4rem;
     }
-
-    .nav-menu {
+    .nav__menu {
       font-weight: 900;
       margin-right: 20rem;
       display: flex;
@@ -36,26 +23,23 @@
       list-style-type: none;
       gap: 3rem;
     }
-    .nav-menu-item {
-      font-size: 1.6rem;
-      padding: 0.8rem 0.12rem;
-      text-transform: uppercase;
-    }
-
-    .nav-menu-link {
+    .nav__menu--link {
       color: $color-blanco;
       text-decoration: none;
       font-weight: 700;
       text-transform: uppercase;
       border-radius: 0.5rem;
     }
-    .nav-menu-link:hover {
+    .nav__menu--item {
+      font-size: 1.6rem;
+      padding: 0.8rem 0.12rem;
+    }
+    .nav__menu--link:hover {
       background-color: $color-botonera;
       color: $color-primary;
       transition: 0.5s;
     }
-
-    .nav-toggle {
+    .nav__toggle {
       color: $color-blanco;
       background: none;
       border: none;
@@ -77,98 +61,111 @@
       justify-content: space-between;
 
       .logo {
-        font-size: 3.6rem;
-        font-weight: bold;
-        padding: 0 4rem;
+        font-size: 2rem;
+        color: $color-blanco;
+        font-family: recursive;
         line-height: 8rem;
       }
-    }
-    .nav-link {
-      color: $color-blanco;
-      text-decoration: none;
-    }
-    .nav-menu {
-      display: flex;
-      margin-right: 4rem;
-      list-style-type: none;
-    }
-    .nav-menu-item {
-      padding: 0 1rem;
-      line-height: 8rem;
-    }
+      .nav__menu {
+        text-decoration: none;
+        list-style-type: none;
+        font-weight: 900;
+        margin-right: 8rem;
+      }
+      .nav__menu--link {
+        color: $color-blanco;
+        font-size: 2rem;
+      }
 
-    .nav-menu-link:hover {
-      background-color: $color-botonera;
-      color: $color-primary;
-      transition: 0.5s;
-    }
-    .nav-toggle {
-      line-height: 8rem;
-      display: block;
-      color: $color-blanco;
-      background: none;
-      border: none;
-      font-size: 3rem;
-      padding: 0 2rem;
-      line-height: 10rem;
-      cursor: pointer;
-      display: none;
+      .nav__menu--item {
+        padding: 0 1rem;
+        line-height: 8rem;
+      }
+      .nav__menu--link:hover {
+        background-color: $color-botonera;
+        color: $color-primary;
+        transition: 0.5s;
+      }
+      .nav__toggle {
+        color: $color-blanco;
+        background: none;
+        border: none;
+        font-size: 3rem;
+        padding: 0 2rem;
+        line-height: 10rem;
+        cursor: pointer;
+        display: none;
+      }
     }
   }
 }
-
 // MOBILE  //
 @media (max-width: 600px) {
   .header {
     grid-area: header;
+    background-color: $color-primary;
     height: 6rem;
-    .logo {
-      font-size: 1.2rem;
-      padding: 0 2rem;
-      line-height: 6rem;
-    }
-
-    .nav-menu {
-      background-color: $color-primary;
-      flex-direction: column;
-      align-items: center;
-      font-weight: 900;
-      margin-right: 20;
-      list-style: none;
-      position: fixed;
-      top: 6.5rem;
-      width: 100%;
-      padding: 0;
-      height: calc(100% - 6rem);
-      overflow-y: auto;
-      left: 100%;
-      transition: left 0.5s;
-      z-index: 10;
-    }
-
-    .nav-menu-item {
-      font-size: 2.6rem;
-      padding: 0.8rem 0.12rem;
-      line-height: 6rem;
-    }
-
-    .nav-menu-link {
-      border-radius: 0.5rem;
-      text-transform: uppercase;
-    }
-    .nav-menu-link:hover {
-      background: none;
-      color: $color-botonera;
-      transition: 0.5s;
-    }
-
-    .nav-toggle {
-      display: block;
-      line-height: 6rem;
-      font-size: 1.2rem;
-    }
-    .nav-menu_visible {
-      left: 0;
+    .nav {
+      font-size: 3.1rem;
+      display: flex;
+      justify-content: space-between;
+      margin: 0 auto;
+      .logo {
+        font-size: 1.6rem;
+        color: $color-blanco;
+        font-family: recursive;
+        line-height: 6rem;
+        font-weight: bold;
+        padding: 0 4rem;
+        font-size: 2.6rem;
+      }
+      .nav__menu {
+        background-color: $color-botonera;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 900;
+        margin-right: 20rem;
+        list-style: none;
+        position: fixed;
+        left: 100%;
+        top: 6rem;
+        width: 100%;
+        gap: 3rem;
+        padding: 0;
+        height: calc(100% - 6rem);
+        overflow-y: auto;
+        z-index: 10;
+      }
+      .nav__menu--link {
+        color: $color-blanco;
+        text-decoration: none;
+        font-weight: 700;
+        text-transform: uppercase;
+        border-radius: 0.5rem;
+      }
+      .nav__menu--item {
+        font-size: 4.6rem;
+        padding: 0.8rem 0.12rem;
+        line-height: 6rem;
+      }
+      .nav__menu--link:hover {
+        background-color: $color-botonera;
+        color: $color-primary;
+        transition: 0.5s;
+      }
+      .nav__toggle {
+        color: $color-blanco;
+        background: none;
+        border: none;
+        font-size: 5.6rem;
+        padding: 0 2rem;
+        line-height: 6rem;
+        cursor: pointer;
+        display: block;
+      }
+      .nav__menu--visible {
+        left: 0;
+      }
     }
   }
 }
