--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-negro: #222;
 $color-botonera: #011b2e;
 $color-botonera2: #0c0c81;
 // Colores Naciones //
-$color-usa: #5f9ea0;
+$color-usa: #244041;
 $color-gbr: #008000;
 $color-fra: #2222db;
 $color-sov: #7e1212a2;
